java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateLocalVariable1-hints.pass
Create field foo in org.netbeans.test.java.hints.CreateLocalVariable1
Create parameter foo
Create local variable foo
